run fmt on modules

--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -30,7 +30,9 @@ jobs:
           terraform_version: ~1.0.0
 
       - name: Terraform Format
-        run: terraform fmt -check
+        run: |
+          terraform fmt -check
+          cd vpc && terraform fmt -check && cd ../
 
       - name: Terraform Init
         run: terraform init
